--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
         "php": "^7.0",
-        "ext-scws": ">=0.2.1",
+        "ext-scws": "~0.2.1",
         "illuminate/support": "~5.1|^6.0|^7.0"
     },
     "autoload": {
