--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "vanry/scws",
+    "name": "skywit/scws",
     "description": "简易中文分词系统在Laravel的封装包。",
     "keywords": ["Laravel", "SCWS"],
     "homepage": "https://github.com/Latrell/SCWS",
